--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
-dash
-dash_bootstrap_components
-dash_extensions
-dash_leaflet
-pandas
-gunicorn
+
+dash==2.4.1
+dash-bootstrap-components==1.0.3
+dash-core-components==2.0.0
+dash-extensions==0.1.3
+dash-html-components==2.0.0
+dash-leaflet==0.1.23
+dash-renderer==1.1.2
+dash-table==5.0.0
+Flask==1.1.2
+Flask-Caching==1.10.1
+Flask-Compress @ file:///tmp/build/80754af9/flask-compress_1623922802283/work
+geobuf==1.1.1
+gunicorn==20.1.0
+pandas @ file:///C:/ci/pandas_1602083338010/work
