--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,6 @@ dash-renderer==1.1.2
 dash-table==5.0.0
 Flask==1.1.2
 Flask-Caching==1.10.1
-Flask-Compress @ file:///tmp/build/80754af9/flask-compress_1623922802283/work
 geobuf==1.1.1
 gunicorn==20.1.0
-pandas @ file:///C:/ci/pandas_1602083338010/work
+pandas 
